// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Panel renders correctly 1`] = `
<div
  className=""
>
  <div
    className=""
  />
  <Header
    title="title"
  />
  <Panel.Section>
    Foo
  </Panel.Section>
</div>
`;

exports[`Panel renders correctly with sections 1`] = `
<div
  className=""
>
  <Panel.Section>
    <Panel.Section>
      Foo
    </Panel.Section>
    <Panel.Section>
      Bar
    </Panel.Section>
  </Panel.Section>
</div>
`;
